data/all_generated_tests/raw_wast_tests/unreachable_InvalidorInconsistentControlFlowGraph_1417.wast
;; 8. **Test Description:** Position `unreachable` within loops containing back-edge branches and control transfers like `br_if` and `br_table`. This ensures CFG handles complexity in branched loops and doesn't misinterpret trap states.    - **Constraint:** Trap should prevent all back-edge branches.    - **Relation to CFG:** Ensures correct CFG handling of loop back-edges and control transfers.

(assert_invalid
  (module 
    (func $unreachable-in-back-edge-loop
      (loop (br_if 0 (i32.const 1)) (unreachable) (br 0))
    )
  )
  "type mismatch"
)